feat(api/open): add subject groups query api
