# docs/swagger.yaml
@@ -122,6 +122,9 @@ definitions:
         type: string
       app_secret:
         type: string
+    required:
+    - app_code
+    - app_secret
     type: object
   handler.authByActionsRequest:
     properties:
@@ -240,6 +243,9 @@ definitions:
         type: object
       type:
         type: string
+    required:
+    - data
+    - type
     type: object
   handler.deleteViaID:
     properties:
@@ -443,6 +449,7 @@ definitions:
       action_id:
         type: string
       environment:
+        description: 'NOTE: this field not used!'
         type: string
       expired_at:
         type: integer
@@ -608,10 +615,49 @@ definitions:
         example: base_info,resource_types,actions
         type: string
     type: object
+  handler.referenceInstanceSelection:
+    properties:
+      id:
+        example: host_view
+        type: string
+      ignore_iam_path:
+        example: false
+        type: boolean
+      system_id:
+        example: bk_cmdb
+        type: string
+    required:
+    - id
+    - system_id
+    type: object
   handler.referenceResourceType:
     properties:
       id:
         example: host
+        type: string
+      system_id:
+        example: bk_cmdb
+        type: string
+    required:
+    - id
+    - system_id
+    type: object
+  handler.relatedResourceType:
+    properties:
+      id:
+        example: host
+        type: string
+      name_alias:
+        type: string
+      name_alias_en:
+        type: string
+      related_instance_selections:
+        items:
+          $ref: '#/definitions/handler.referenceInstanceSelection'
+        type: array
+      selection_mode:
+        description: '实例选择方式/范围: ["all", "instance", "attribute"]'
+        example: instance
         type: string
       system_id:
         example: bk_cmdb
@@ -710,16 +756,34 @@ definitions:
         example: 1
         type: integer
     type: object
+  handler.responseSubject:
+    properties:
+      id:
+        example: admin
+        type: string
+      name:
+        example: Administer
+        type: string
+      type:
+        example: user
+        type: string
+    type: object
   handler.subject:
     properties:
       id:
+        example: admin
         type: string
       type:
+        example: user
         type: string
     required:
     - id
     - type
     type: object
+  handler.subjectGroupsResponse:
+    items:
+      $ref: '#/definitions/handler.responseSubject'
+    type: array
   handler.subjectTemplateSerializer:
     properties:
       subject_id:
@@ -876,6 +940,7 @@ definitions:
       action_id:
         type: string
       environment:
+        description: 'NOTE: this field not used!'
         type: string
       expired_at:
         type: integer
@@ -997,18 +1062,22 @@ paths:
       description: list policies of ids or between min-max ids
       operationId: api-engine-policies-list
       parameters:
-      - in: query
-        name: timestamp
-        type: integer
-      - in: query
-        name: min_id
-        type: integer
-      - in: query
-        name: max_id
-        type: integer
-      - in: query
+      - example: 1,2,3
+        in: query
         name: ids
         type: string
+      - example: 10001
+        in: query
+        name: max_id
+        type: integer
+      - example: 1
+        in: query
+        name: min_id
+        type: integer
+      - example: 1592899208
+        in: query
+        name: timestamp
+        type: integer
       produces:
       - application/json
       responses:
@@ -1038,10 +1107,12 @@ paths:
       description: list policy pks by condition
       operationId: api-engine-policy-id-list
       parameters:
-      - in: query
+      - example: 1592899208
+        in: query
         name: begin_updated_at
         type: integer
-      - in: query
+      - example: 1592899208
+        in: query
         name: end_updated_at
         type: integer
       produces:
@@ -1073,7 +1144,8 @@ paths:
       description: get max policy id by condition
       operationId: api-engine-policy-id-max
       parameters:
-      - in: query
+      - example: 1592899208
+        in: query
         name: updated_at
         type: integer
       produces:
@@ -1804,17 +1876,21 @@ paths:
         name: system_id
         required: true
         type: string
-      - in: query
+      - example: edit_host
+        in: query
         name: actionID
         required: true
         type: string
-      - in: query
-        name: pageSize
-        type: integer
-      - in: query
+      - example: 1
+        in: query
         name: page
         type: integer
-      - in: query
+      - example: 100
+        in: query
+        name: pageSize
+        type: integer
+      - example: 1592899208
+        in: query
         name: timestamp
         type: integer
       produces:
@@ -1851,7 +1927,8 @@ paths:
         name: system_id
         required: true
         type: string
-      - in: query
+      - example: 1,2,3
+        in: query
         name: ids
         required: true
         type: string
@@ -2107,6 +2184,55 @@ paths:
       summary: resource type update
       tags:
       - model
+  /api/v1/systems/{system_id}/subjects/{subject_type}/{subject_id}/groups:
+    get:
+      consumes:
+      - application/json
+      description: get a subject's groups, include the inherit groups from department
+      operationId: api-open-subject-groups-get
+      parameters:
+      - description: System ID
+        in: path
+        name: system_id
+        required: true
+        type: string
+      - description: Subject Type
+        in: path
+        name: subject_type
+        required: true
+        type: string
+      - description: Subject ID
+        in: path
+        name: subject_id
+        required: true
+        type: string
+      - description: get subject's inherit groups from it's departments
+        in: query
+        name: inherit
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            X-Request-Id:
+              description: the request id
+              type: string
+          schema:
+            allOf:
+            - $ref: '#/definitions/util.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.subjectGroupsResponse'
+              type: object
+      security:
+      - AppCode: []
+      - AppSecret: []
+      summary: subject group
+      tags:
+      - open
   /api/v1/systems/{system_id}/token:
     get:
       consumes:
